flask-app/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: service1
    nodePort: 30086
  selector:
    app: service1
