flask-app/istio_virtual_service1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - service1
  http:
  - route:
    - destination:
        host: service1
